Thu Sep 06 14:17:44 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* tests/harness/testsuite.cc: When displaying valgrind output, seek
	  back to the start of the valgrind output for the current test
	  before dumping it to stdout: previously, the earlier check for the
	  valgrind error message to display (when not using -v) caused the
	  first 1024 bytes of the valgrind output to get dropped.

Tue Sep 04 20:13:29 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* matcher/multimatch.cc: For remote submatches, keep a count of
	  matches which we know exist, but we don't get passed from the
	  submatch.  These can be detected by checking for the lowerbound
	  on the matches in the submatch being greater than the index of
	  the last item in the returned submset.  When the match is over,
	  use this count, together with docs_matched, to adjust the lower
	  bound and estimate (and upper bound, if we've not seen as many
	  documents as we were asked to check for).  Fixes checkatleast2
	  and checkatleast3 in the remote database case.
	* tests/harness/testsuite.h: Add TEST_GREATER_OR_EQUAL,
	  TEST_GREATER, TEST_LESSER_OR_EQUAL and TEST_LESSER macros, which
	  display the values of the arguments if they fail.
	* tests/api_anydb.cc: Use TEST_GREATER_OR_EQUAL and TEST_EQUAL in
	  checkatleast2 and checkatleast3, to make failures easier to
	  debug.

Tue Sep 04 18:16:49 BST 2007  Olly Betts <olly@survex.com>

	* matcher/multimatch.cc: Restructure to make the control flow clearer.
	  Rewrap some comments which got wrapped to ~82 columns somehow.

Tue Sep 04 17:21:49 BST 2007  Olly Betts <olly@survex.com>

	* docs/overview.html: Restore the HTML header I accidentally deleted
	  in November 2006.

Tue Sep 04 17:15:30 BST 2007  Olly Betts <olly@survex.com>

	* docs/overview.html: Fix typo.

Tue Sep 04 13:47:27 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* tests/api_anydb.cc: Tighten test_checkatleast3 to check for
	  previous bug (now fixed).
