@@ -1,3 +1,10 @@
+Thu Sep 06 14:31:15 BST 2007  Olly Betts <olly@survex.com>
+
+	* tests/harness/testsuite.cc: More localised fix for preserving the
+	  start of the valgrind report when in verbose mode.  Rework the code
+	  which pulls out the start of the report to summarise why the test
+	  failed.
+
 Thu Sep 06 14:17:44 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* tests/harness/testsuite.cc: When displaying valgrind output, seek
